logs, ocean-node pres.verification
