# src/index.ts
@@ -1,10 +1,11 @@
 import express, { Request, Response } from 'express'
 import swaggerDoc from '../swagger.json' assert { type: 'json' }
 import swaggerUi from 'swagger-ui-express'
-import errorHandler, { asyncHandler } from './utils/middleware.js'
+import { asyncHandler, requestLogger, errorHandler } from './utils/middleware.js'
 import { PolicyRequestPayload, PolicyRequestResponse } from './@types/policy'
 import { PolicyHandlerFactory } from './policyHandlerFactory.js'
 import { handleVerifyPresentationRequest } from './utils/verifyPresentationRequest.js'
+import { downloadLogs } from './utils/logger.js'
 
 const app = express()
 const authType = process.env.AUTH_TYPE || 'waltid'
@@ -29,14 +30,17 @@ async function handlePolicyRequest(
 }
 
 app.use(express.json())
+app.use(requestLogger)
 app.post('/', asyncHandler(handlePolicyRequest))
 app.post(
   '/verify/:id',
   express.urlencoded({ extended: true }),
   asyncHandler(handleVerifyPresentationRequest)
 )
+app.get('/logs', downloadLogs)
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDoc))
 app.use(errorHandler)
+
 const PORT = process.env.PORT || 3000
 app.listen(PORT, () => {
   console.log(`Server is running on port ${PORT}`)
